# workbench-agent-ce

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: dogfood-pr-diffscan.yml  dogfood-scan-git.yml  dogfood-scan.yml  tests.yml
src/workbench_agent/: exceptions.py  main.py
src/workbench_agent/api/: __init__.py  exceptions.py  workbench_client.py
src/workbench_agent/api/clients/: __init__.py  download_api.py  internal_api.py  projects_api.py  quickscan_api.py  scans_api.py  upload_api.py  users_api.py  vulnerabilities_api.py
src/workbench_agent/api/services/: __init__.py  quick_scan_service.py  report_service.py  resolver_service.py  results_service.py  scan_content_service.py  scan_deletion.py  status_check_service.py  upload_service.py  user_permissions.py  waiting_service.py
src/workbench_agent/api/utils/: process_waiter.py  report_definitions.py
src/workbench_agent/cli/: __init__.py  parent_parsers.py  parser.py  validators.py
src/workbench_agent/handlers/: __init__.py  blind_scan.py  delete_scan.py  download_reports.py  evaluate_gates.py  import_da.py  import_sbom.py  quick_scan.py  scan.py  scan_git.py  show_results.py
src/workbench_agent/utilities/: __init__.py  config_display.py  error_handling.py  post_import_summary.py  post_report_summary.py  post_scan_summary.py  pre_flight_checks.py  prep_upload_archive.py  result_utilities.py  sbom_validator.py  scan_workflows.py  toolbox_wrapper.py  upload_data_prep.py
tests/fixtures/: signatures.fossid
tests/functional/: README.md  cli_helpers.py  test_blind_scan_workflow.py  test_import_da_workflow.py  test_import_sbom_workflow.py  test_scan_git_workflow.py  test_scan_workflow.py
tests/integration/: conftest.py  test_blind_scan_integration.py  test_download_reports_integration.py  test_evaluate_gates_integration.py  test_scan_git_integration.py
tests/unit/api/: test_workbench_api.py
tests/unit/api/clients/projects/: test_projects_client.py
tests/unit/api/clients/scans/: test_scans_client.py
tests/unit/api/clients/users/: test_users_client.py
tests/unit/api/services/: test_quick_scan_service.py  test_report_service.py  test_resolver_service.py  test_results_service.py  test_scan_content_service.py  test_scan_deletion_service.py  test_status_check_service.py  test_upload_service.py  test_user_permissions_service.py
tests/unit/api/utils/: test_process_waiter.py
tests/unit/cli/: conftest.py  test_argument_parsing.py  test_argument_validation.py  test_delete_scan_parser.py  test_main_function.py  test_scan_operations_parser.py  test_validation_edge_cases.py
tests/unit/handlers/: test_blind_scan_resolve.py  test_delete_scan_handler.py  test_scan_handler.py
tests/unit/utilities/: test_config_display.py  test_error_handling.py  test_sbom_validator.py  test_scan_workflows.py  test_toolbox_wrapper.py  test_upload_data_prep.py
